# Simox

./: .gitlab-ci.yml  CMakeLists.txt  readme.md
.gitlab/: CODEOWNERS
.gitlab/ci/: armarx-workspace.json  workspace.json
CMakeModules/: BulletCheckPrecision.cpp  FindSPNAV.cmake  SimoxConfig.cmake.in  SimoxMacros.cmake
CMakeModules/check_for_member/: test.in.cpp
CMakeModules/find_modules/: FindALGLIB.cmake  FindCANopen.cmake  FindCppCheck.cmake  FindCppyy.cmake  FindDenseCRF.cmake  FindFlyCapture2.cmake  FindFreenect.cmake  FindFreenect2.cmake  FindGStreamer.cmake  FindGraphviz.cmake  FindJeMalloc.cmake  FindLIBSSH.cmake  FindLcov.cmake  FindLibClang.cmake  FindMongoClient.cmake  FindMongoDB.cmake  FindNLOPT.cmake  FindOIViewer.cmake  FindOpenNI.cmake  FindOptoForceOMD.cmake  FindPCAN.cmake  FindPCRE.cmake  FindRBDL.cmake  FindVICON.cmake  Findavcodec.cmake  Finddl.cmake  Findglib-2.0.cmake  Findjsoncpp.cmake  Findlibbson-1.0.cmake  Findlibmongoc-1.0  Findlibusb-1.0.cmake  Findmultisense_lib.cmake  Findqwt.cmake  Findrt.cmake  Findswscale.cmake  Findx264.cmake
GeometricPlanning/: ArticulatedObjectDoorHelper.cpp  ArticulatedObjectDoorHelper.h  ArticulatedObjectGeometricPlanningHelper.cpp  ArticulatedObjectGeometricPlanningHelper.h  CMakeLists.txt  ParametricPath.cpp  ParametricPath.h  types.h  util.cpp  util.h  visualization.cpp  visualization.h
GeometricPlanning/assert/: assert.h
GeometricPlanning/assert/doctest/: handler.cpp
GeometricPlanning/assert/virtual_robot/: assert.cpp  assert.h
GeometricPlanning/path_primitives/: Circle.cpp  Circle.h  CircleSegment.cpp  CircleSegment.h  Line.cpp  Line.h  PathPrimitive.cpp  PathPrimitive.h
GeometricPlanning/tests/: AOGPHelper.cpp  CMakeLists.txt
GraspPlanning/: ApproachMovementGenerator.cpp  ApproachMovementGenerator.h  ApproachMovementSurfaceNormal.cpp  ApproachMovementSurfaceNormal.h  ContactConeGenerator.cpp  ContactConeGenerator.h  ConvexHullGenerator.cpp  ConvexHullGenerator.h  ConvexHullGeneratorQhull.cpp  GraspStudio.h  MeshConverter.cpp  MeshConverter.h
GraspPlanning/GraspPlanner/: GenericGraspPlanner.cpp  GenericGraspPlanner.h  GraspPlanner.cpp  GraspPlanner.h  GraspPlannerEvaluation.cpp  GraspPlannerEvaluation.h
GraspPlanning/GraspQuality/: GraspEvaluationPoseUncertainty.cpp  GraspEvaluationPoseUncertainty.h  GraspQualityMeasure.cpp  GraspQualityMeasure.h  GraspQualityMeasureWrenchSpace.cpp  GraspQualityMeasureWrenchSpace.h  GraspQualityMeasureWrenchSpaceNotNormalized.cpp  GraspQualityMeasureWrenchSpaceNotNormalized.h
GraspPlanning/Visualization/: ConvexHullVisualization.cpp  ConvexHullVisualization.h
MotionPlanning/: ApproachDiscretization.cpp  ApproachDiscretization.h  Saba.h
MotionPlanning/CSpace/: CSpace.cpp  CSpace.h  CSpaceNode.cpp  CSpaceNode.h  CSpacePath.cpp  CSpacePath.h  CSpaceSampled.cpp  CSpaceSampled.h  CSpaceTree.cpp  CSpaceTree.h  ConfigurationConstraint.cpp  ConfigurationConstraint.h  Sampler.cpp  Sampler.h
MotionPlanning/Planner/: BiRrt.cpp  BiRrt.h  GraspIkRrt.cpp  GraspIkRrt.h  GraspRrt.cpp  GraspRrt.h  MotionPlanner.cpp  MotionPlanner.h  PlanningThread.cpp  PlanningThread.h  Rrt.cpp  Rrt.h
MotionPlanning/PostProcessing/: ElasticBandProcessor.cpp  ElasticBandProcessor.h  PathProcessingThread.cpp  PathProcessingThread.h  PathProcessor.cpp  PathProcessor.h  ShortcutProcessor.cpp  ShortcutProcessor.h
MotionPlanning/Visualization/: RrtWorkspaceVisualization.cpp  RrtWorkspaceVisualization.h
MotionPlanning/tests/: SabaCSpaceTest.cpp  SabaShortcutProcessorTest.cpp
SimDynamics/: DynamicsWorld.cpp  DynamicsWorld.h  SimDynamics.h
SimDynamics/DynamicsEngine/: DynamicsEngine.cpp  DynamicsEngine.h  DynamicsEngineFactory.h  DynamicsObject.cpp  DynamicsObject.h  DynamicsRobot.cpp  DynamicsRobot.h  DynamicsUtils.cpp  DynamicsUtils.h
SimoxQtUtility/qwt/: SimoxQwtColorMap.cpp  SimoxQwtColorMap.h  SimoxQwtSpectrogramData.cpp  SimoxQwtSpectrogramData.h
SimoxUtility/: CMakeLists.txt  EigenStdVector.h  random.h
SimoxUtility/algorithm/: advanced.h  apply.hpp  contains.h  for_each_if.h  fuzzy_find.h  get_map_keys_values.h  minmax.h  ordered_circular_buffer.h  string.h  vector.hpp
SimoxUtility/caching/: CacheMap.cpp  CacheMap.h
SimoxUtility/color/: Color.cpp  Color.h  ColorMap.cpp  ColorMap.h  GlasbeyLUT.cpp  GlasbeyLUT.h  KellyLUT.h  convert_byte_float.hpp  hsv.cpp  hsv.h  interpolation.cpp  interpolation.h  json.cpp  json.h
SimoxUtility/eigen/: AssertAsException.h  EigenStdVector.h
SimoxUtility/error/: SimoxError.cpp  SimoxError.h
SimoxUtility/filesystem/: list_directory.cpp  list_directory.h  make_relative.h  remove_trailing_separator.h
SimoxUtility/iterator/: xy_index_range_iterator.h
SimoxUtility/json/: converters.cpp  converters.h  eigen_conversion.cpp  eigen_conversion.h  error.cpp  error.h  io.cpp  io.h  json.h  json.hpp  util.cpp  util.h
SimoxUtility/math/: SoftMinMax.cpp  SoftMinMax.h  isfinite.h  mean.h  project_to_plane.h  rescale.h  scale_value.h  sum.h  zero.h
SimoxUtility/meta/: EnumNames.hpp  key_type.h  type_name.cpp  type_name.h
VirtualRobot/: AbstractFactoryMethod.h  Affordances.h  Assert.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  GraspableSensorizedObject.cpp  GraspableSensorizedObject.h  KinematicChain.cpp  KinematicChain.h  LinkedCoordinate.cpp  LinkedCoordinate.h  Logging.h  ManipulationObject.cpp  ManipulationObject.h  MathTools.cpp  MathTools.h  Obstacle.cpp  Obstacle.h  Primitive.cpp  Primitive.h  Random.cpp  Random.h  Robot.cpp  Robot.h  RobotConfig.cpp  RobotConfig.h  RobotFactory.cpp  RobotFactory.h  RobotNodeSet.cpp  RobotNodeSet.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  Safety.cpp  Safety.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectSet.cpp  (+16 more)
VirtualRobot/examples/InverseDynamics/: CMakeLists.txt  InverseDynamics.cpp
doc/: CMakeLists.txt
docker/: armarx-workspace.json  bionic  jammy
(+1048 files in other folders)
